--- a/air travel analysis code.Rmd
+++ b/air travel analysis code.Rmd
@@ -6,7 +6,7 @@ output: html_document
 
 ## Задача
 
-на основе данных постараться выяснить:
+на основе данных выяснить:
 
 * какие проблемы есть в авиаперевозках
 * какие улучшения можно предложить на основе выводов по данным
@@ -64,9 +64,12 @@ month(airline$date)>8 & month(airline$date)<12 ~ 'autumn',
 month(airline$date)>11 | month(airline$date)<3 ~ 'winter',
 TRUE ~ 'unknown')
 airline = airline %>% mutate(season = season)
+
 #условимся, что отзывы людей из датафрейма "airline" на авиакомпанию отражают объективную картинку крутости компании, ведь другого рейтинга у нас нет; и составим список топовых авикакомпаний (компании с рейтингом >=6.5)
+
 airline = get_hw1_airline_df() %>% group_by(airline_name) %>% summarise(mean = mean(overall_rating)) %>% filter(mean>=6.5)
 airline = na.omit(airline)
+
 #теперь определим, какие авиакомпании в датафрейме "seat" являются топовыми, согласно этому списку
 top_rating_airline = case_when(
 seat$airline_name == "aegean-airlines" ~ 'YES',
@@ -152,9 +155,11 @@ seat$season == "summer" ~ 'summer',
 TRUE ~ 'not summer')
 season_airline_correlation = data.frame(seat, top_rating_airline, what_season) %>% filter(seat_storage_rating > 0)
 airline_correlation = season_airline_correlation %>% group_by(top_rating_airline, what_season) %>% summarise(mean = seat_storage_rating) %>% na.omit(airline_correlation) %>% summarise(mean = mean(mean))
+
 #как мы видим по данным, выборка не самая репрезентативная, т.к., по логике, оценки топовых компаний должны быть, вне зависимости от сезона, в целом, выше, чем оценки нетоповых компаний.
 #такая неточность произошла из-за того, что мы рассматривали авиакомпании в рейтингом >=6.5
 #попробуем теперь рассмотреть более топовые компании (рейтинг >=8) и сделать выводы
+
 airline = get_hw1_airline_df() %>% group_by(airline_name) %>% summarise(mean = mean(overall_rating)) %>% filter(mean>=8)
 airline = na.omit(airline)
 top_top_rating_airline = case_when(
@@ -206,8 +211,12 @@ seat$season == "summer" ~ 'summer',
 TRUE ~ 'not summer')
 season_airline_correlation = data.frame(seat, top_top_rating_airline, what_season) %>% filter(seat_storage_rating > 0)
 airline_correlation = season_airline_correlation %>% group_by(top_top_rating_airline, what_season) %>% summarise(mean = seat_storage_rating) %>% na.omit(airline_correlation) %>% summarise(mean = mean(mean))
+
 #теперь данные очевидно лучше отражают ситуацию
+
+
 ## визуализация данных (так как все значения и названия в таблице у нас на английском, а отчет я делаю на русском, приходится вручную создавать колонки с названиями. вероятно, можно было бы найти переводящую функцию, но, поскольку у нас довольно мало значений, этого не потребовалось)
+
 rounded_airline = round((airline_correlation$mean), digits=1)
 airline_correlation_table = data.table('Топовая ли это авиакомпания?' = c('НЕТ', 'НЕТ', 'ДА', 'ДА'), 'Когда произошла поездка?' = c('не летом', 'летом', 'не летом', 'летом'), 'Средний рейтинг мест для хранения' = rounded_airline)
 ggplot(data = airline_correlation) + geom_bar(aes(x = what_season, y = mean, fill = top_top_rating_airline), position = 'dodge', size = 4, stat = 'identity') + ylab('средний рейтинг мест для хранения') + xlab('') + scale_x_discrete(labels = c('не лето', 'лето')) + scale_fill_brewer(name = 'Топовая ли это\nавиакомпания?', labels=c("Нет","Да"), palette = 'PuRd') + theme_light() + theme(axis.text.x = element_text(vjust = 8))
@@ -221,7 +230,9 @@ ggplot(data = airline_correlation) + geom_bar(aes(x = what_season, y = mean, fil
 ```{r echo = F, message = F, warning = F}
 #2. ПРОВЕРИМ ГИПОТЕЗУ О ВЛИЯНИИ ВРЕМЕНИ ГОДА НА
 ОЦЕНКУ МЕСТ ХРАНЕНИЯ ПАССАЖИРОМ, РАССМОТРЕВ ОЦЕНКИ НА РАЗНЫХ КАТЕГОРИЯХ КАБИН - ТОПОВЫХ (БИЗНЕС-КЛАСС) И НЕ ТОПОВЫХ (ЭКОНОМ-КЛАСС)
+
 #(для определения топового типа кабины не обязательно анализировать датафреймы, достаточно бытового знания о том, что кабины бизнес-класса круче)
+
 top_rating_cabin = case_when(
 seat$cabin_flown =='Premium Economy' ~ 'YES',
 TRUE ~ 'NO')
@@ -230,7 +241,10 @@ seat$season == "summer" ~ 'summer',
 TRUE ~ 'not summer')
 season_cabin_correlation = data.frame(seat, top_rating_cabin, what_season)
 cabin_correlation = season_cabin_correlation %>% group_by(top_rating_cabin, what_season) %>% summarise(mean = seat_storage_rating) %>% na.omit(cabin_correlation) %>% summarise(mean = mean(mean))
+
+
 #визуализация данных (так как все значения и названия в таблице у нас на английском, а отчет я делаю на русском, приходится вручную создавать колонки с названиями. вероятно, можно было бы найти переводящую функцию, но, поскольку у нас довольно мало значений, этого не потребовалось)
+
 rounded_cabin = round((cabin_correlation$mean), digits=1)
 cabin_correlation_table = data.table('Топовая ли это кабина (бизнес-класс)?' = c('НЕТ', 'НЕТ', 'ДА', 'ДА'), 'Когда произошла поездка?' = c('не летом', 'летом', 'не летом', 'летом'), 'Средний рейтинг мест для хранения' = rounded_cabin)
 ggplot(data = cabin_correlation) + geom_bar(aes(x = what_season, y = mean, fill = top_rating_cabin), position = 'dodge', size = 4, stat = 'identity') + ylab('средний рейтинг мест для хранения') + xlab('') + scale_x_discrete(labels = c('не лето', 'лето')) + scale_fill_brewer(name = 'Топовая ли\nэто кабина?', labels=c("Нет","Да"), palette = 'PuBuGn') + theme_light() + theme(axis.text.x = element_text(vjust = 8))
@@ -245,7 +259,6 @@ ggplot(data = cabin_correlation) + geom_bar(aes(x = what_season, y = mean, fill 
 
 Чтобы оценки мест хранения летом не были ниже оценок в другие времена года, стоит расширить зону места хранения вещей в эконом-классе.
 
-\
 
 #### Вопрос 2
 
@@ -345,18 +358,23 @@ knitr::kable(percent_cool_table_final)
 # код для ответа на вопрос 3:
 airport = get_hw1_airport_df()
 lounge = get_hw1_lounge_df()
+
 #сгруппируем аэропорты датасета "airport" по среднему рейтингу
+
 airport = data.frame(name = airport$airport_name, ratin = airport$terminal_cleanliness_rating)
 airport = na.omit(airport)
 airport = airport %>% group_by(name) %>% summarise(A_rate = mean(ratin))
 airport = na.omit(airport)
+
 #сгруппируем аэропорты датасета "lounge" по среднему рейтингу, приведя при этом их названия к виду названий в датасете "airport"
 lounge_airport = str_replace_all(lounge$airport,' ', '-')
 lounge = data.frame(name = str_to_lower(lounge_airport), ratin = lounge$cleanliness_rating, lounge_name = lounge$lounge_name)
 lounge = na.omit(lounge)
 lounge = lounge %>% group_by(name, lounge_name) %>% summarise(L_rate = mean(ratin))
+
 #объединим датасеты, чтобы провести анализ
 united_dataset = left_join(lounge, airport, by = 'name')
+
 #найдем те лаундж-зоны, рейтинг чистоты которых выше, чем рейтинг аэропортов, в которых они находятся
 a = case_when(
 united_dataset$L_rate > united_dataset$A_rate ~ 'YES',
@@ -364,6 +382,7 @@ TRUE ~ 'NO'
 )
 united_dataset$L_more_than_R = a
 united_dataset = united_dataset %>% filter(L_more_than_R == 'YES')
+
 #получим список лаундж-зон, рейтинг чистоты которых выше рейтинга аэропортов, в которых они находятся
 k = str_to_title(united_dataset$lounge_name)
 k = unique(k)
@@ -391,6 +410,7 @@ united_dataset1 = united_dataset1 %>% filter(L_more_than_R == 'YES')
 frequency_of_a_name = str_count(united_dataset1$name)
 united_dataset1 = united_dataset1 %>% mutate(num = frequency_of_a_name) %>% group_by(name) %>% summarise(frequency_of_a_name = num)
 united_dataset1 <- united_dataset1[!duplicated(united_dataset1$name),]
+
 #выделим топ аэропортов по доле в них лаундж-зон, оценки чистоты которых выше оценок чистоты самого аэропорта
 united_dataset1 = united_dataset1 %>% filter(frequency_of_a_name >= 23)
 name = str_to_title(united_dataset1$name)
@@ -398,6 +418,7 @@ name = str_replace_all(name, '-', ' ')
 final = data.frame('Название_аэропорта' = name, 'Количество_отзывов' = united_dataset1$frequency_of_a_name)
 final = arrange(final, -Количество_отзывов)
 final = data.table(final)
+
 ggplot(data = final) + geom_bar(aes(x=reorder(Название_аэропорта, -Количество_отзывов), y = Количество_отзывов, width = 0.7), , fill = 'thistle', col = 'black', stat = 'identity') + xlab("") + ylab('Количество таких оценок') + ggtitle('Распределение аэропортов, в которых оценка чистоты\nлаундж-зон превышает оценку чистоты самого аэропорта') + theme_dark() + theme(axis.text.x = element_text(angle = 55, hjust = 1, size=7)) + scale_x_discrete(labels = c('Bangkok Suvarnabhumi', 'Sao Paulo Guarulhos', 'Amsterdam Schiphol', 'Atlanta Hartsfield', 'Brussels Zaventem', 'Klia Kuala Lumpur', 'Washington Dulles', 'Amman Queen Alia', 'Istanbul Ataturk', 'London Heathrow', 'Los Angeles Lax', 'Shanghai Pudong', 'Toronto Pearson')) + theme(axis.text.x = element_text(size = 8)) + theme(legend.position="none")
 ```
 
